@@ -29,6 +29,7 @@
   * gpasm/testsuite/test: test .hxl and .hxh files
   * gpasm/testsuite/gpasm.mchip/listfiles/list5.hxh,
     gpasm/testsuite/gpasm.mchip/listfiles/list5.hxl: added
+  * configure.ac, configure, doc/gputils.lyx: version changed to 1.0.0
 
 2012-12-08  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, gpasm/gperror.c, gpasm/lst.c,
